--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,20 @@ section h2 {
   justify-content: center;
 }
 
+.content-container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #d3d3d3;
+}
+
+.content-section {
+  background-color: #e8e9eb;
+  width: 80%;
+  border-radius: 10px;
+}
+
 .portfolio-item {
   width: 30%;
   margin: 0 15px 30px;
@@ -100,10 +114,13 @@ section h2 {
 }
 
 .experience-content,
-.education-content,
+.education-content {
+  width: 40%;
+}
+
 .skills-content,
 .certifications-content {
-  width: 40%;
+  width: 100%;
 }
 
 .experience-list,
